# quacks

./: README.md  pyproject.toml
src/quacks/: quacks_game.py  quacks_pieces.py
src/quacks.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
