[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quacks"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
keywords = []
authors = [
  { name = "U.N. Owen", email = "void@some.where" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  matplotlib,
  numpy,
  pyqt6
  flask,
  jinja2
]

[project.urls]
Documentation = "https://github.com/unknown/quacks#readme"
Issues = "https://github.com/unknown/quacks/issues"
Source = "https://github.com/unknown/quacks"

[project.scripts]
quacks = "quacks.quacks_game:main"

[tool.coverage.run]
source_pkgs = ["quacks", "tests"]
branch = true
parallel = true
omit = [
  "src/quacks/__about__.py",
]

[tool.coverage.paths]
quacks = ["src/quacks", "*/quacks/src/quacks"]
tests = ["tests", "*/quacks/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
